# NeuroPaint

./: docker-compose.yml  readme.md
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
